# e-commerce_py

./: .gitignore  README.md  alembic.ini  main.py  makefile  pyproject.toml
alembic/versions/: 21b86220cedf_update_seller_table.py
app/core/: database.py
app/core/security/: dependencies.py  hashed.py  token.py
app/models/: black_list.py  product.py  seller.py  user.py
app/modules/auth/: auth_controller.py  auth_schema.py  auth_service.py
app/modules/product/: product_controller.py  product_repository.py  product_schema.py  product_service.py
app/modules/seller/: seller_controller.py  seller_repository.py  seller_schema.py  seller_service.py
app/modules/user/: user_controller.py  user_repository.py  user_schema.py  user_service.py
scripts/: reset_db.py  seed_admin.py
